Use OCP image based on Golang version

--- a/pkg/dockerfilegen/dockerfile-templates/BuildImage.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/BuildImage.dockerfile.tmpl
@@ -1,6 +1,6 @@
 # DO NOT EDIT! Generated Dockerfile.
 
-FROM registry.ci.openshift.org/ocp/4.17:cli-artifacts as tools
+FROM registry.ci.openshift.org/ocp/{{ .ocpVersion }}:cli-artifacts as tools
 
 # Dockerfile to bootstrap build and test in openshift-ci
 FROM {{.builder}} as builder
