--- a/pkg/dockerfilegen/dockerfile-templates/rhel-9/FuncUtil.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/rhel-9/FuncUtil.dockerfile.tmpl
@@ -33,14 +33,15 @@ RUN ln -s {{.app_file}} /usr/local/bin/deploy && \
 USER 65532
 
 LABEL \
-      com.redhat.component="openshift-serverless-1-{{.project_dashcase}}{{.component_dashcase}}-rhel9-container" \
-      name="openshift-serverless-1/{{.project_dashcase}}{{.component_dashcase}}-rhel8" \
+      com.redhat.component="openshift-serverless-1-{{.project_dashcase}}{{.component_dashcase}}-{{.rhelVersion}}-container" \
+      name="openshift-serverless-1/{{.project_dashcase}}{{.component_dashcase}}-{{.rhelVersion}}" \
       version=$VERSION \
       summary="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       maintainer="serverless-support@redhat.com" \
       description="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.description="Red Hat OpenShift Serverless {{.project}}{{.component}}" \
-      io.openshift.tags="{{.component_dashcase}}"
+      io.openshift.tags="{{.component_dashcase}}" \
+      cpe="cpe:/a:redhat:openshift_serverless:{{.short_version}}::{{.shortRhelVersion}}"
 
 ENTRYPOINT ["/usr/bin/bash"]
