--- a/pkg/dockerfilegen/dockerfile-templates/rhel-9/FuncUtil.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/rhel-9/FuncUtil.dockerfile.tmpl
@@ -17,7 +17,7 @@ FROM $GO_RUNTIME
 
 ARG VERSION={{.version}}
 
-RUN microdnf install socat tar
+RUN microdnf install -y socat tar
 {{- range $c := .additional_instructions }}
 {{ $c }}
 {{- end }}
