--- a/pkg/dockerfilegen/dockerfile-templates/rhel-9/BuildImage.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/rhel-9/BuildImage.dockerfile.tmpl
@@ -20,6 +20,10 @@ RUN ./get-helm-3 --version v3.11.3 --no-sudo && helm version
 
 RUN GOFLAGS='' go install github.com/mikefarah/yq/v3@latest
 RUN GOFLAGS='' go install -tags="exclude_graphdriver_btrfs containers_image_openpgp" github.com/containers/skopeo/cmd/skopeo@v1.17.0
+# See: https://github.com/openshift-eng/art-tools/pull/2105
+ENV FORCE_GOTOOLCHAIN=false
+# TODO: remove sed command after art-tools's PR is merged
+RUN sed -Ei 's|export GOTOOLCHAIN=.+?|export GOTOOLCHAIN="$(go.real env GOTOOLCHAIN)"|g' /usr/bin/go
 
 # go install creates $GOPATH/.cache with root permissions, we delete it here
 # to avoid permission issues with the runtime users
