--- a/pkg/dockerfilegen/dockerfile-templates/FuncUtil.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/FuncUtil.dockerfile.tmpl
@@ -33,8 +33,8 @@ RUN ln -s {{.app_file}} /usr/local/bin/deploy && \
 USER 65532
 
 LABEL \
-      com.redhat.component="openshift-serverless-1-{{.project_dashcase}}{{.component_dashcase}}-{{.rhelVersion}}-container" \
-      name="openshift-serverless-1/{{.project_dashcase}}{{.component_dashcase}}-{{.rhelVersion}}" \
+      com.redhat.component="openshift-serverless-1-{{.name}}-container" \
+      name="openshift-serverless-1/{{.name}}" \
       version=$VERSION \
       summary="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       maintainer="serverless-support@redhat.com" \
@@ -42,6 +42,8 @@ LABEL \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}{{.component}}" \
       io.k8s.description="Red Hat OpenShift Serverless {{.project}}{{.component}}" \
       io.openshift.tags="{{.component_dashcase}}" \
+      vendor="Red Hat, Inc." \
+      release=$VERSION \
       cpe="cpe:/a:redhat:openshift_serverless:{{.short_version}}::{{.shortRhelVersion}}"
 
 
