--- a/pkg/dockerfilegen/dockerfile-templates/MustGather.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/MustGather.dockerfile.tmpl
@@ -22,8 +22,8 @@ RUN mkdir -p $LOGS_DIR && \
 USER 65532
 
 LABEL \
-      com.redhat.component="openshift-serverless-1-{{.project_dashcase}}-{{.rhelVersion}}-container" \
-      name="openshift-serverless-1/serverless-{{.project_dashcase}}-{{.rhelVersion}}" \
+      com.redhat.component="openshift-serverless-1-{{.name}}-container" \
+      name="openshift-serverless-1/serverless-{{.name}}" \
       version={{.version}} \
       summary="Red Hat OpenShift Serverless 1 {{.project}}" \
       maintainer="serverless-support@redhat.com" \
@@ -31,6 +31,8 @@ LABEL \
       io.k8s.display-name="Red Hat OpenShift Serverless 1 {{.project}}" \
       io.k8s.description="Red Hat OpenShift Serverless {{.project}}" \
       io.openshift.tags="{{.main}}" \
+      vendor="Red Hat, Inc." \
+      release=$VERSION \
       cpe="cpe:/a:redhat:openshift_serverless:{{.short_version}}::{{.shortRhelVersion}}"
 
 ENTRYPOINT /usr/bin/gather
