--- a/pkg/dockerfilegen/dockerfile-templates/MustGather.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/MustGather.dockerfile.tmpl
@@ -32,7 +32,7 @@ LABEL \
       io.k8s.description="Red Hat OpenShift Serverless {{.project}}" \
       io.openshift.tags="{{.main}}" \
       vendor="Red Hat, Inc." \
-      release={{.version}} \
+      release=$VERSION \
       cpe="cpe:/a:redhat:openshift_serverless:{{.short_version}}::{{.shortRhelVersion}}"
 
 ENTRYPOINT /usr/bin/gather
