--- a/pkg/dockerfilegen/dockerfile-templates/rhel-9/FuncUtil.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/rhel-9/FuncUtil.dockerfile.tmpl
@@ -43,7 +43,7 @@ LABEL \
       io.k8s.description="Red Hat OpenShift Serverless {{.project}}{{.component}}" \
       io.openshift.tags="{{.component_dashcase}}" \
       vendor="Red Hat, Inc." \
-      release={{.version}} \
+      release=$VERSION \
       cpe="cpe:/a:redhat:openshift_serverless:{{.short_version}}::{{.shortRhelVersion}}"
 
 ENTRYPOINT ["/usr/bin/bash"]
