Move release notes section from RPA make it like konflux team suggestion (#826)
* update RPA RP and R template according konflux team suggestion

* update must gather dockerfile temp fix placeholder

* fix placeholder for ubi8 and ubi9

--- a/pkg/dockerfilegen/dockerfile-templates/rhel-9/MustGather.dockerfile.tmpl
+++ b/pkg/dockerfilegen/dockerfile-templates/rhel-9/MustGather.dockerfile.tmpl
@@ -23,7 +23,7 @@ USER 65532
 
 LABEL \
       com.redhat.component="openshift-serverless-1-{{.name}}-container" \
-      name="openshift-serverless-1/serverless-{{.name}}-{{.rhelVersion}}" \
+      name="openshift-serverless-1/{{.name}}" \
       version={{.version}} \
       summary="Red Hat OpenShift Serverless 1 {{.project}}" \
       maintainer="serverless-support@redhat.com" \
